%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1101 &-9142760397923858139
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3685233504923929732}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 10.495306
  m_TransitionOffset: 0
  m_ExitTime: 0.0000000029175848
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-8997906322403348423
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Espera
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 2572134795249923390}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: ac698b25fd2cd7d4ca9124699ff43ef9, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-8889734237800502530
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 5833889816625194978}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.9763597
  m_TransitionOffset: 0
  m_ExitTime: 0.0000000010493777
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1102 &-6453762915557042014
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: W
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -1790808387419450494}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 892a07a8ce54d734da8ae1362262e8f5, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-4904277003866929663
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Ola
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -9142760397923858139}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 96512622c026eca48ba349a3be5cc2c8, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-4753689335262740945
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 7316740146369145025}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 1.9999999
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-3685233504923929732
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: LadoALadoLento
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 3688771360680287114}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 8c1fb7e00b407ca4486840f77f3fc3d2, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-2846651253309302548
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -6453762915557042014}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 3.8336241
  m_TransitionOffset: 0
  m_ExitTime: 0.000000005800452
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-1790808387419450494
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 7316740146369145025}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 6.838923
  m_TransitionOffset: 0
  m_ExitTime: 3.6263886e-10
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-149543394697783263
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Entrada
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -4753689335262740945}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 2cf71bc42d9b4b64c8cd1cdc7a869c8f, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: FinalBossContainer
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: Entrada
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: LAL
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Ola
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: LALL
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: TrianguloInv
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Triangulo
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Medio
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: W
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Salida
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 2128093272623140311}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &366851468823022570
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -4904277003866929663}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 6.918111
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1107 &2128093272623140311
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -8997906322403348423}
    m_Position: {x: 310, y: 180, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -149543394697783263}
    m_Position: {x: 310, y: 250, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -3685233504923929732}
    m_Position: {x: 80, y: 390, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 5637470048342963381}
    m_Position: {x: 540, y: 390, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 2578165274501441372}
    m_Position: {x: 450, y: 460, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 5089739155490836297}
    m_Position: {x: 170, y: 460, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 7316740146369145025}
    m_Position: {x: 310, y: 320, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -4904277003866929663}
    m_Position: {x: 80, y: 320, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -6453762915557042014}
    m_Position: {x: 540, y: 320, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 5833889816625194978}
    m_Position: {x: 70, y: 180, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions:
  - {fileID: -8889734237800502530}
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 90, y: 120, z: 0}
  m_EntryPosition: {x: 330, y: 120, z: 0}
  m_ExitPosition: {x: 510, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -8997906322403348423}
--- !u!1101 &2572134795249923390
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -149543394697783263}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &2578165274501441372
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Triangulo
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 5154733753033641628}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 2ef6d819f1251974d9503ce6a6a0d6ea, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &3688771360680287114
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 5089739155490836297}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 11.711633
  m_TransitionOffset: 0
  m_ExitTime: 0.0000000015447631
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &5089739155490836297
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Triangulo Inv
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 7036074582729060813}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: d429ce19e2c1a364fa49e51d4a4bafa1, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &5154733753033641628
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 5637470048342963381}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 1.8731058
  m_TransitionOffset: 0
  m_ExitTime: 0.0000000017427133
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &5637470048342963381
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Medio
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -2846651253309302548}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: ed766a5cec4dcda4ba358f50618e34e9, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &5833889816625194978
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Final
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 664527d2c5dab874f815c7e1738d8bcb, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &7036074582729060813
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LALL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Triangulo
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Medio
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: W
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2578165274501441372}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 10.425816
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &7316740146369145025
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: LadoALado
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 366851468823022570}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: da8424197380dec4786d3cd733cce04a, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
